fix horizontal scroll mobile version

--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -1486,6 +1486,7 @@ body {
         .work-area {
             width: 100%;
             left: 0;
+            padding: 15px;
 
             .work-area__header {
                 .other-header__block {
